Source/JavaScriptCore: https://bugs.webkit.org/show_bug.cgi?id=72756 DOMHTMLElement’s accessKey property is declared as available in WebKit version that didn’t have it

Patch by Vineet Chaudhary <rgf748@motorola.com> on 2012-02-10
Reviewed by Timothy Hatcher.

* API/WebKitAvailability.h: Added AVAILABLE_AFTER_WEBKIT_VERSION_5_1 and
  AVAILABLE_WEBKIT_VERSION_1_3_AND_LATER_BUT_DEPRECATED_AFTER_WEBKIT_VERSION_5_1 for the new versions.

Source/WebCore: https://bugs.webkit.org/show_bug.cgi?id=72756
DOMHTMLElement’s accessKey property is declared as available in WebKit version that didn’t have it.

Patch by Vineet Chaudhary <rgf748@motorola.com> on 2012-02-10
Reviewed by Timothy Hatcher.

No new tests.

* bindings/objc/PublicDOMInterfaces.h: Moving accessKey property to DOMHTMLElement
  with an appropriate availability macro AVAILABLE_AFTER_WEBKIT_VERSION_5_1.
  Also Moving accessKey property to HTMLAnchorElement, HTMLAreaElement, HTMLButtonElement,
  HTMLInputElement, HTMLLabelElement, HTMLLegendElement  and HTMLTextAreaElement idls
  with an availability macro AVAILABLE_WEBKIT_VERSION_1_3_AND_LATER_BUT_DEPRECATED_AFTER_WEBKIT_VERSION_5_1.
* html/HTMLAnchorElement.idl: Adding accessKey entries back to idls under LANGUAGE_OBJECTIVE_C.
* html/HTMLAreaElement.idl: Ditto.
* html/HTMLButtonElement.idl: Ditto.
* html/HTMLInputElement.idl: Ditto.
* html/HTMLLabelElement.idl: Ditto.
* html/HTMLLegendElement.idl: Ditto.
* html/HTMLTextAreaElement.idl: Ditto.

Canonical link: https://commits.webkit.org/95321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107459 268f45cc-cd09-0410-ab3c-d52691b4dbfc